<package format="3">
  <name>ultralytics</name>
  <version>0.0.1</version>
  <description>Ultralytics inference service node for detector pipeline</description>
  <maintainer email="sam@streamlinebio.ai">Sam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>detector_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
